--- a/CSS/IMAGES AND LAYOUT/float.css
+++ b/CSS/IMAGES AND LAYOUT/float.css
@@ -102,4 +102,22 @@ ul > li {
     width: 100%;
     height: 70px;
     background-color: #2d3e50;
+}
 
+.cf:before,
+.cf:after {
+    content: '';
+    display: table;
+}
+
+.cf:after {
+    clear: both;
+}
+
+#footer_text {
+    color: #fff;
+    text-align: center;
+    padding-right: 620px;
+    padding-top: 15px;
+   
+}
