--- a/CSS/CSS PROJECT WEEK 3/main.css
+++ b/CSS/CSS PROJECT WEEK 3/main.css
@@ -448,12 +448,16 @@ form {
     padding-top: 6px;
 }
 .form-button {
+    margin-top: 10px;
     text-align: center;
-    font-size:10px;
+    font-size:12px;
     background-color: #fd9727;
     width: 120px;
-    height: 25px;
+    padding: 4px;
     color: white;
+    margin-bottom: 20px;
+
+   
 }
 
 .form-button {
@@ -463,7 +467,6 @@ form {
   .form-button:hover {
     background-color: #fff;
     color: black;
-
   }
 
 
