--- a/BOOTSTRAP/BOOTSTRAP_PROJECT/css/main.css
+++ b/BOOTSTRAP/BOOTSTRAP_PROJECT/css/main.css
@@ -8,6 +8,9 @@
   font-family: Lato-Light;
   src: url(./fonts/Lato-Light.ttf); }
 /*---------------------------------HEADER----------------------*/
+.container-fluid {
+  padding: 0; }
+
 h3 {
   font-weight: bold;
   margin-top: 5px; }
@@ -50,43 +53,40 @@ nav {
 .star1 {
   color: #ffffff;
   display: block;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  bottom: 7px;
+  margin-left: 5px;
+  margin-right: 5px; }
 
 .line_left {
-  display: block;
+  display: inline-block;
   border-bottom: 2.5px solid #ffffff;
-  width: 75px;
-  margin-left: 44%;
-  position: relative;
-  top: 10px; }
+  width: 20%;
+  margin-left: 27%;
+  position: relative; }
 
 .line_right {
-  display: block;
+  display: inline-block;
   border-bottom: 3px solid #ffffff;
-  width: 75px;
-  margin-left: 52%;
-  position: relative;
-  bottom: 8px; }
+  width: 20%;
+  position: relative; }
 
 .text1 {
   padding: 0 0 50px 0; }
 
 .line_left1 {
-  color: black;
-  display: block;
-  border-bottom: 3px solid black;
-  width: 75px;
-  margin-left: 44%;
-  position: relative;
-  top: 10px; }
+  display: inline-block;
+  border-bottom: 2.5px solid black;
+  width: 20%;
+  margin-left: 27%;
+  position: relative; }
 
 .line_right1 {
-  display: block;
-  border-bottom: 3.5px solid black;
-  width: 75px;
-  margin-left: 52%;
-  position: relative;
-  bottom: 8px; }
+  display: inline-block;
+  border-bottom: 3px solid black;
+  width: 20%;
+  position: relative; }
 
 .background2 {
   background-color: #fff; }
@@ -100,7 +100,11 @@ nav {
 .star2 {
   color: black;
   display: block;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  bottom: 7px;
+  margin-left: 5px;
+  margin-right: 5px; }
 
 .port {
   padding: 50px 0 10px 0; }
@@ -114,5 +118,105 @@ nav {
 .second-pic {
   margin-top: 30px;
   padding: 0 0 40px 0; }
+
+.img-padding {
+  padding: 0; }
+
+.float-star > span, i {
+  float: left; }
+
+/*********************about******************************/
+#about {
+  width: 100%;
+  background-color: #00bc9c;
+  padding-bottom: 30px;
+  padding-top: 15px; }
+
+#about-head {
+  text-align: center;
+  color: #ffffff;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-top: 17px; }
+
+.paragraph-about {
+  margin: auto;
+  width: 30%; }
+
+#text {
+  width: 30%;
+  margin: 0 auto;
+  color: white; }
+
+.text1 {
+  padding: 20px; }
+
+#btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  border-radius: 5px;
+  padding: 10px; }
+
+.fa-info-circle {
+  margin: 5px; }
+
+#contact_me {
+  text-align: center;
+  color: black;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-top: 2%;
+  margin-bottom: 1%; }
+
+form {
+  width: 25%;
+  margin: auto;
+  margin-bottom: 70px; }
+
+footer {
+  background-color: #293e4f;
+  width: 100%; }
+  footer p {
+    color: #ffffff;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 30px; }
+
+#footer-div {
+  width: 45%;
+  margin: auto;
+  padding-bottom: 1%;
+  padding-top: 2%; }
+
+#location-head {
+  text-align: center;
+  color: #ffffff;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-top: 17px;
+  font-size: 22px; }
+
+.icon-footer {
+  color: #ffffff;
+  padding: 15px;
+  border: 1px solid #ffffff;
+  border-radius: 50%;
+  margin-right: 5px;
+  width: 50px; }
+
+#bit {
+  font-weight: 500; }
+
+#bit-p {
+  margin-top: 0px; }
+
+#copyright {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 4%; }
 
 /*# sourceMappingURL=main.css.map */
